src/objects/LBI__LatticeApplicationRegion__c.object
<CustomObject>
    <description>Top level settings container for Lattice application and/or region.</description>
    <fields>
        <fullName>LBI__AccountMatchingField__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <label>Account Matching Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ActivityTrackingRemoveDay__c</fullName>
        <label>Remove Activity Tracking Records After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__AdditionalNotificationEmails__c</fullName>
        <label>Additional Notification Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__AlternativeAccountRelationshipPath__c</fullName>
        <description>When a Lead is not attached to a Recommendation but you&apos;ve created your own relationship to the Account, use this field to describe the path.  Such as:  Contact__r.AccountId</description>
        <inlineHelpText>When a Lead is not attached to a Recommendation but you&apos;ve created your own relationship to the Account, use this field to describe the path.  Such as:  Contact__r.AccountId</inlineHelpText>
        <label>Alternative Account Relationship Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ApplicationOrRegionName__c</fullName>
        <label>Application or Region Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__AuthHeaderPrefix__c</fullName>
        <formula>IF(TEXT(LBI__Type__c) = &quot;Customer Growth&quot;
, &quot;playmaker:&quot;
, &quot;lp:&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth Header Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ConnectedToLattice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True - successfully oAuth to Lattice; False - not connected</description>
        <label>Connected to Lattice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__DaysUntouched__c</fullName>
        <description>How many days idle until a recommendation is considered untouched?</description>
        <inlineHelpText>How many days idle until a recommendation is considered untouched?</inlineHelpText>
        <label>Days Untouched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__DefaultOpportunityCloseDays__c</fullName>
        <description>How many days in the future do we want to default the close date for converted opps?</description>
        <label>Default Opportunity Close Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__DefaultOpportunityStage__c</fullName>
        <description>Used in Recommendation Conversion Routines to set default opportunity stage.</description>
        <label>Default Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DisplayBuyingSignals__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Buying Signals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__EngageButtonLabel__c</fullName>
        <label>Engage Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorLogsLifePeriod__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Error Logs Life Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ExpireAllPlays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire All Plays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HasBeenInstalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True - do not autopop login page in admin, false - do pop it</description>
        <label>Has Been Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HideConvertActionLeadBased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Convert Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HideConvertAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Convert Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HideDisqualifyAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Disqualify Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HideHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HideLinkAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Link Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__HoldoutsLiveTimeperiod__c</fullName>
        <defaultValue>90</defaultValue>
        <description>A period from now to specified number in days when holdouts became eligible for deletion.</description>
        <label>HoldoutsLiveTimeperiod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__InboundLeadsiFrameHeightOverride__c</fullName>
        <defaultValue>700</defaultValue>
        <description>Used during the inbound leads functionality.  Intended as an override to the default 600px height of an iframe.</description>
        <inlineHelpText>Used during the inbound leads functionality.  Intended as an override to the default 600px height of an iframe.</inlineHelpText>
        <label>Inbound Leads iFrame Height Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__IntegrationStatus__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Integration Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LPMaximumPageSize__c</fullName>
        <defaultValue>200</defaultValue>
        <label>LP Maximum Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__LPScoringPageSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Used by the Scoring API to figure out how many records to send to scoring at a time.  This can dynamically lower and raise to a maximum of 200.</description>
        <inlineHelpText>Used by the Scoring API to figure out how many records to send to scoring at a time.  This can dynamically lower and raise to a maximum of 200.</inlineHelpText>
        <label>LP Scoring Current Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__LastConnectionDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Connection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeURL__c</fullName>
        <label>LatticeURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LBI__LeadWorkflowEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Workflow Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__MaxScoringRetryCount__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Max Scoring Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__NoDataFoundMessage__c</fullName>
        <label>No Data Found Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LBI__NoRecommendationMessage__c</fullName>
        <defaultValue>&quot;No recommendations found - release more plays from Lattice Predictive Marketing &amp; Sales Applications!&quot;</defaultValue>
        <description>Message that shows if no recommendations are found for a</description>
        <label>No Recommendation Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LBI__OperationMode__c</fullName>
        <label>Operation Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PerformLPScoring__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If unchecked, scoring callout will not be made.</description>
        <inlineHelpText>If unchecked, scoring callout will not be made.</inlineHelpText>
        <label>Perform LP Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ProcessNewPlaysRecommendations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>schedule the batch job to run every hour if checked true.  If that checkbox if false, then we would unschedule the job to process new data.</description>
        <label>Process New Plays &amp; Recommendations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__RecExpirationDaysAfterConversion__c</fullName>
        <defaultValue>18 * 30</defaultValue>
        <description>How long to keep a Recommendation after Conversion/Qualification</description>
        <inlineHelpText>How long to keep a Recommendation after Conversion/Qualification</inlineHelpText>
        <label>Once Converted, Remove After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RecExpirationDaysAfterDisqualification__c</fullName>
        <defaultValue>30</defaultValue>
        <description>How Long to keep a Recommendation after Disqualification</description>
        <inlineHelpText>How Long to keep a Recommendation after Disqualification</inlineHelpText>
        <label>Once Disqualified, Remove After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RecExpirationDaysAfterExpiration__c</fullName>
        <defaultValue>3</defaultValue>
        <description>How long to keep a Recommendation after Expiration</description>
        <inlineHelpText>How long to keep a Recommendation after Expiration</inlineHelpText>
        <label>Once Expired, Remove After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RecomOppRelationshipFieldName__c</fullName>
        <description>This field holds the name of the field to use when linking a recommendation to an existing Opportunity.  When blank this will default to the LBI__Opportunity__c field in the package.</description>
        <inlineHelpText>This field holds the name of the field to use when linking a recommendation to an existing Opportunity.  When blank this will default to the LBI__Opportunity__c field in the package.</inlineHelpText>
        <label>Recom Opp Relationship Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RetrieveRecommendations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, then retrieve recommendations from Lattice</description>
        <inlineHelpText>If this is checked, then retrieve recommendations from Lattice</inlineHelpText>
        <label>Retrieve Recommendations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__SalesprismEnableSidebar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesprism Enable Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__SalesprismStandaloneCRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesprism Standalone CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__SalesprismURL__c</fullName>
        <label>Salesprism URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LBI__SalesprismWindowHeight__c</fullName>
        <label>Salesprism Window Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ScoreRecordsLifePeriod__c</fullName>
        <defaultValue>180</defaultValue>
        <label>Score Records Life Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ShowLift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Lift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowPurchaseHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Purchase History?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowScore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ShowSidebar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__SkipUnlaunchedAccountExtensions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Unlaunched Account Extensions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__SupportEmailAddress__c</fullName>
        <label>Support Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LBI__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Growth</fullName>
                </value>
                <value>
                    <fullName>Lead Prioritization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__iFrameBaseURL__c</fullName>
        <description>Ex:  https://pls.lattice-engines.com/Dante3/index.aspx</description>
        <label>iFrame Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__iFrameCallBackURL__c</fullName>
        <label>Call Back URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__iFrameCustomSettingsString__c</fullName>
        <label>Custom Settings String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__iFrameDefaultTab__c</fullName>
        <label>Default Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__iFrameHasSalesPrism__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Sales Prism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__oAuthAppId__c</fullName>
        <formula>IF(TEXT(LBI__Type__c) = &quot;Customer Growth&quot;
, &quot;lattice.sf.bis&quot;
, &quot;lattice.sf.lp&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>oAuth App Id</label>
        <type>Text</type>
    </fields>
    <label>Lattice Application/Region</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__ApplicationOrRegionName__c</columns>
        <columns>LBI__IsDefault__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LAR-{0000000}</displayFormat>
        <label>Lattice Application Region Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Application/Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>